<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eyeCatch</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_eye_catch_fragment">eyeCatch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="eyecatch_start_game">Start game</string>
    <string name="eyecatch_continue_game">Continue game</string>
    <string name="eyecatch_select_user">Select user</string>
    <string name="eyecatch_create_user">Create user</string>
    <string name="eyecatch_select_video">Select video</string>
    <string name="eyecatch_touch_training">Touch training</string>
    <string name="eyecatch_select_statistic">Statistic</string>
    <string name="eyecatch_statistic_testing">Extra testing</string>
    <string name="eyecatch_generalization_test">Generalization test</string>

    <string name="create_user_name">Username</string>
    <string name="create_user_age">Age in months</string>
    <string name="create_user_times_per_trial">Time per trial</string>
    <string name="create_user_number_of_trials">Number of trials in tests</string>
    <string name="create_user_mastery_criteria">Mastery criteria</string>
    <string name="create_user_video_duration">Video duration</string>
	<string name="create_user_choose_box">Choose the box to be used</string>

    <string name="info_user_created">User is created</string>
    <string name="dummy_zero">0</string>
    
    <string name="dialog_statistic_testing_title">Name</string>
    <string name="dialog_statistic_testing_message">Please enter the users name</string>
    <string name="dialog_end_game_title">End of game</string>
    <string name="dialog_end_game_message">The game is over, do you want to see the rest of the video?</string>
    
    <string name="game_pause_title">Game paused</string>
    <string name="game_pause_message">Are you sure you want to exit the game?</string>
    <string name="save_quit">Save and quit</string>
    <string name="save">Save</string>
    <string name="quit">Quit</string>
    <string name="exit">Exit</string>
    <string name="select_user">Select user</string>
        
    <string name="statistic_name">Name:</string>
    <string name="statistic_age">Age:</string>
    <string name="statistic_training">Training (wrong/correct) - Mastery Criteria:</string>    
    <string name="statistic_testing">Testing - Number of tests:</string>
    <string name="statistic_correct">Correct:</string>
    <string name="statistic_wrong">Wrong:</string>
    <string name="statistic_face_type">Face:</string>
    
    <string name="menu_dump_local">Save to file</string>
    <string name="menu_dump_share">Share data</string>
    
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    
    <string name="pre_A">pre-A</string>
    <string name="pre_B">pre-B</string>
    <string name="pre_C">pre-C</string>
    <string name="pre_D">pre-D</string>
    <string name="pre_E">pre-E</string>
    <string name="pre_F">pre-F</string>
    <string name="pre_G">pre-G</string>
    <string name="pre_H">pre-H</string>
    <string name="post_H">post-H</string>
    
    <string name="face_aurelien">aurelien</string>
    <string name="face_joelle">joelle</string>
    <string name="face_mariama">mariama</string>
    <string name="face_mike">mike</string>
    
    <string name="box">box</string>
    <string name="box_icon">box_box</string>
    <string name="box_gift">box_gift</string>
    <string name="box_monster">box_monster</string>
    <string name="box_gorilla">box_gorilla</string>
    <string name="box_cat">box_cat</string>
    <string name="box_elephant">box_elephant</string>
    <string name="box_dino_1">box_dino_1</string>
    <string name="box_dino_2">box_dino_2</string>
    
    <string name="error_missing_name_or_age">Name or age is not filled</string>
    <string name="error_short_video_duration">Sorry, but the video you selexted is to short to be used</string>
    <string name="error_missing_user_or_video">Sorry, but you need to select a user and a video before you can start the game</string>
    <string name="error_missing_video">Sorry, but you need to select a video before you can start the training</string>
    
    <string name="testing">TESTING</string>
    <string name="training">TRAINING</string>
    
    <string name="by_lars_minimon">by Lars Klintwall and Minimon</string>

    <string name="title_activity_eye_catch_game_fragment">EyeCatchGameFragment</string>

    <string name="statistic_delete">DELETE</string>
	<string name="create_user_choose_face">Choose face to be used</string>
	<string name="create_user_error_delay">Error duration</string>

</resources>