<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            tools:context=".EyeCatchFragment">

	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="center"
			android:gravity="center"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			tools:context=".EyeCatchFragment">


		<Button
				android:id="@+id/eyecatch_continue_game"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:onClick="onButtonClick"
				android:enabled="false"
				android:text="@string/eyecatch_continue_game"/>

		<Button
				android:id="@+id/eyecatch_start_game"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:onClick="onButtonClick"
				android:text="@string/eyecatch_start_game"/>

		<Button
				android:id="@+id/eyecatch_select_user"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:onClick="onButtonClick"
				android:text="@string/eyecatch_select_user"/>

		<Button
				android:id="@+id/eyecatch_create_user"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:onClick="onButtonClick"
				android:text="@string/eyecatch_create_user"/>

		<Button
				android:id="@+id/eyecatch_select_statistic"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:onClick="onButtonClick"
				android:text="@string/eyecatch_select_statistic"/>

		<Button
				android:id="@+id/eyecatch_select_video"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:onClick="onButtonClick"
				android:text="@string/eyecatch_select_video"/>

		<Button
				android:id="@+id/eyecatch_touch_training"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:onClick="onButtonClick"
				android:text="@string/eyecatch_touch_training"/>

		<Button
				android:id="@+id/eyecatch_statistic_testing"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:onClick="onButtonClick"
				android:text="@string/eyecatch_statistic_testing"/>

		<Button
				android:id="@+id/eyecatch_generalization_test"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:onClick="onButtonClick"
				android:text="@string/eyecatch_generalization_test"/>

	</LinearLayout>
</ScrollView>