<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/statistic_inner_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp" >

    <TextView
        android:id="@+id/statistic_face_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingRight="10dp"
        android:text="@string/statistic_face_type"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/statistic_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/statistic_face_text"
        android:layout_alignLeft="@+id/statistic_correct"
        android:layout_toRightOf="@+id/statistic_face_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/statistic_correct_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/statistic_face_text"
        android:paddingRight="10dp"
        android:text="@string/statistic_correct"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/statistic_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/statistic_correct_text"
        android:layout_toRightOf="@+id/statistic_correct_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/statistic_wrong_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/statistic_correct_text"
        android:paddingRight="10dp"
        android:text="@string/statistic_wrong"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/statistic_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/statistic_wrong_text"
        android:layout_alignBottom="@+id/statistic_wrong_text"
        android:layout_alignLeft="@+id/statistic_correct"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>